--- a/FourierTransform/fourier_transform.ipynb
+++ b/FourierTransform/fourier_transform.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "<h1 align=\"center\">Volume 2: The Fourier Transform.</h1>\n",
     "\n",
-    "    <Name>\n",
-    "    <Class>\n",
-    "    <Date>"
+    "    Caelan Osman\n",
+    "    Math 345 Sec 1\n",
+    "    December 1, 2020"
    ]
   },
   {
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -616,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
