--- a/FacialRecognition/facial_recognition.ipynb
+++ b/FacialRecognition/facial_recognition.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=\"center\">Volume 1: Facial Recognition.</h1>\n",
+    "<h1 align=\"center\"> Facial Recognition.</h1>\n",
     "\n",
     "    Caelan Osman\n",
     "    Math 345 Sec 3\n",
